--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
    <header><h1>"Do campo à cidade: colhendo oportunidades"</h1></header> 
-
+ <center> <img class="oi" src="IMG-20240725-WA0005.jpg" alt="IMG-20240725-WA0005"></center>
 <h1>
-  <p>O fluxo migratório do campo para cidade é um fenômeno global que tem transformado significativamente as dinâmicas sociais e econômicas ao redor do mundo. Á medida que as áreas urbanas se expandem e se tornam centros de oportunidades econômicas, muitos indivíduos deixam suas raízes rurais em busca de uma vida melhor.
-   Neste contexto é necessário pensar a migração pode ser vista não apenas como um deslocamento geográfico, mas também como uma busca por novas oportunidades de educação, emprego e qualidade de vida.  Da vida rural para o ambiente urbano, surgem oportunidades para o desenvolvimento em várias áreas. Na cidade, há acesso á educação diversificada e formação profissional, ampliando habilidades essenciais para o mercado de trabalho. A variedade de setores e economia urbana promove novas experiências de trabalho, abrindo portas para carreiras promissoras. Redes de contatos profissionais se expandem, proporcionando oportunidades para colaborações e crescimento. Recursos modernos e serviços acessíveis melhoram a qualidade de vida. A inovação urbana e avanços tecnológicos oferecem novos horizontes para aprendizado e progresso.
+  <p>O fluxo migratório do campo para cidade é um fenômeno global que tem transformado significativamente as dinâmicas sociais e econômicas ao redor do mundo. Á medida que as áreas urbanas se expandem e se tornam centros de oportunidades econômicas, muitos indivíduos deixam suas raízes rurais em busca de uma vida melhor.</p>
+ <p> Neste contexto é necessário pensar a migração pode ser vista não apenas como um deslocamento geográfico, mas também como uma busca por novas oportunidades de educação, emprego e qualidade de vida.  Da vida rural para o ambiente urbano, surgem oportunidades para o desenvolvimento em várias áreas. 
+ <p>Na cidade, há acesso á educação diversificada e formação profissional, ampliando habilidades essenciais para o mercado de trabalho. A variedade de setores e economia urbana promove novas experiências de trabalho, abrindo portas para carreiras promissoras. Redes de contatos profissionais se expandem, proporcionando oportunidades para colaborações e crescimento. Recursos modernos e serviços acessíveis melhoram a qualidade de vida. A inovação urbana e avanços tecnológicos oferecem novos horizontes para aprendizado e progresso.</p>
    Assim, a transição do campo para a cidade oferece diversas oportunidades de desenvolvimento pessoal e profissional. Com acesso a uma educação mais diversificada, um mercado de trabalho ampliado, redes de contato expandidas, melhores serviços e infraestrutura, além de inovação e avanços tecnológicos, há um ambiente propício para explorar novas habilidades e alcançar novos objetivos na vida urbana.</p>
 </h1>
  <a href="index2.html"   a>
